# cfworker-template

./: .gitignore  CONTRIBUTING.md  CONTRIBUTING_EN.md  Cargo.toml  README.md  README_EN.md  default.nix  flake.nix  rust-toolchain.toml  wrangler.toml
.github/: pull_request_template.md  pull_request_template_en.md
.github/workflows/: deploy.yml  quality-gate.yml
src/: lib.rs
